--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,8 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">PowerSmart</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_empty">EmptyActivity</string>
     <string name="measurement_information">Measurement Information</string>
     <string name="reading_time">Reading Time</string>
     <string name="meter_serial_number">Meter Serial Number</string>
