--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_empty">EmptyActivity</string>
+    <string name="default_notification_channel_id">anomaly_notification_channel</string>
     <string name="measurement_information">Measurement Information</string>
     <string name="reading_time">Reading Time</string>
     <string name="meter_serial_number">Meter Serial Number</string>
@@ -19,4 +20,5 @@
     <string name="notifications_null">No notifications available</string>
     <string name="notification_icon">Notification Icon</string>
     <string name="notification_message">Notifications Message</string>
+    <string name="notifications_title">Notifications</string>
 </resources>
