--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="notifications_null">No notifications available</string>
     <string name="notification_icon">Notification Icon</string>
     <string name="notification_message">Notifications Message</string>
+    <string name="notifications_title">Notifications</string>
 </resources>
