--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="notification_icon">Notification Icon</string>
     <string name="notification_message">Notifications Message</string>
     <string name="notifications_title">Notifications</string>
+    <string name="version">Version %1$s</string>
 </resources>
